Turn Navigation Overflow Bug Into Feature

--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 :root {
     --header-colour: #000;
     --grid-image-width: 300px;
+    --gallery-image-border-radius: 16px;
     --overlay-opacity: 0.9;
-    --overlay-safety-margin: 5vh;
-    --nav-opacity: 0.2;
+    --nav-opacity: 0.8;
+    --arrow-fill-colour: rgb(255, 255, 255);
     --arrow-opacity: 0.3;
     --arrow-transition-time: 0.2s;
-    --image-border-radius: 16px;
 }
 
 body {
@@ -35,7 +35,7 @@ body {
 
 .galleryImage {
     width: 100%;
-    border-radius: var(--image-border-radius);
+    border-radius: var(--gallery-image-border-radius);
 }
 
 .overlay {
@@ -56,14 +56,12 @@ body {
     transform: translate(-50%, -50%);
 
     text-align: center;
-    width: 90%;
+    width: 100%;
 }
 
 .viewerImage {
     max-width: 100%;
     max-height: 100vh;
-    /* max-height: calc(100vh - var(--overlay-safety-margin)); */
-    /* border-radius: var(--image-border-radius); */
 }
 
 .nav {
@@ -76,10 +74,14 @@ body {
     display: flex;
 }
 
-.nav-backward > img,
-.nav-forward > img {
-    width: 20%;
+.nav-arrow {
+    width: 15%;
     opacity: var(--arrow-opacity);
+    margin: 2rem;
+}
+
+.nav-arrow > path {
+    fill: var(--arrow-fill-colour);
 }
 
 .nav-backward,
@@ -102,7 +104,6 @@ body {
 }
 
 .nav-backward {
-    border-radius: var(--image-border-radius) 0 0 var(--image-border-radius);
     background: linear-gradient(
         270deg,
         rgba(0, 0, 0, 0),
@@ -117,7 +118,6 @@ body {
 .nav-forward {
     justify-content: flex-end;
 
-    border-radius: 0 var(--image-border-radius) var(--image-border-radius) 0;
     background: linear-gradient(
         90deg,
         rgba(0, 0, 0, 0),
@@ -132,5 +132,8 @@ body {
     margin-bottom: 2rem;
 }
 
-/* @media screen and (max-width: 768px) {
-} */
+@media screen and (max-width: 768px) {
+    :root {
+        --nav-opacity: 0;
+    }
+}
